# toy_std

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  common.h  main.cpp  raw_vector.h  readme.txt  vector.h
src/: algebra.cpp  algebra_matrix.cpp  algebra_quaternion.cpp  algebra_vector.cpp  algorithm.cpp  any.cpp  any.h  array.cpp  array.h  common.h  concepts.cpp  concepts.h  coroutines.h  generator.cpp  iterator_traits.cpp  list.cpp  list.h  main.cpp  math_matrix.h  math_quaternion.h  math_vector.h  matrix.cpp  matrix.h  memory.h  mvector.cpp  mvector.h  optional.cpp  optional.h  quaternion.cpp  quaternion.h  raw_list.cpp  raw_vector.cpp  raw_vector.h  stack.cpp  stack.h  string.cpp  toy_std.cpp  toy_stl.cpp  toy_stl.h  tuple.cpp  (+4 more)
src/algebra/: algebra.cpp  matrix.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  vector.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/coroutines/: async_manual_reset_event.cpp  async_manual_reset_event.h  coroutines.cpp  generator.cpp  generator.h
src/memory/: deleters.cpp  deleters.h  memory.cpp  shared_ptr.cpp  shared_ptr.h  unique_ptr.cpp  unique_ptr.h
src/type_info/: registry.cpp  registry.h  type_index.cpp  type_index.h  type_info.cpp  type_name.cpp  type_name.h
test/: CMakeLists.txt  algebra_matrix.cpp  algebra_quaternion.cpp  algebra_vector.cpp  any.cpp  array.cpp  async_manual_reset_event.cpp  generator.cpp  list.cpp  main.cpp  math_matrix.cpp  math_quaternion.cpp  math_vector.cpp  matrix.cpp  memory.cpp  mvector.cpp  optional.cpp  quaternion.cpp  raw_list.cpp  raw_vector.cpp  stack.cpp  string.cpp  test.cpp  type_info.cpp  variant.cpp  vector.cpp
test/algebra/: matrix.cpp  quaternion.cpp  vector.cpp
